# Vibe-Blender

./: .gitignore  README.md  config.yaml  pyproject.toml
.claude/skills/blender/: README.md  SKILL.md
.claude/skills/blender-edit/: README.md  SKILL.md
.claude/skills/blender-edit/examples/: __init__.py  camera_adjustment.py  compositional_edit.py  lighting_adjustment.py  object_movement.py
.claude/skills/blender-edit/helpers/: __init__.py  eval_render_template.py  execute_blender_edit.py
.claude/skills/blender/examples/: basic_cube.py  materials_example.py  modifiers_example.py
.claude/skills/blender/helpers/: execute_blender.py  render_template.py  renderer.py
.claude/skills/blender/reference/: blender_api_quick_ref.md
src/vibe_blender/: __init__.py  __main__.py  cli.py  config.py  orchestrator.py
src/vibe_blender/agents/: __init__.py  critic.py  editor.py  generator.py  planner.py
src/vibe_blender/execution/: __init__.py  executor.py  renderer.py  watchdog.py
src/vibe_blender/llm/: __init__.py  base.py  ollama_backend.py  openai_backend.py
src/vibe_blender/models/: __init__.py  schemas.py
src/vibe_blender/prompts/: critic.txt  generator.txt  generator_refine.txt  planner.txt  planner_clarification.txt  planner_reference.txt
src/vibe_blender/templates/: __init__.py  render_views.py
tests/: __init__.py  reinstall.bash  test01.bash  test_editor.py
